bdr.BDR2.scala.error
Erreur de compilation :
BDR2:19: error: ';' expected but 'else' found.
    } else {fini=true}
      ^